@@ -516,6 +516,7 @@ public class ZGBlocks {
 	public static final Block exodusStone = new ZGPlanetStone("exodusstone", 6.5F, ZGBlocks.exodusCobblestone)
 			.setBlockHarvestLevel(EnumHarvestToolZG.PICKAXE.getHarvestTool(), EnumHarvestLevelZG.AMARANTH.getHarvestLevel());
 	public static final Block exodusGravel = new ZGGravel("exodusgravel");
+	public static final Block exodusRock = new ZGBlockBase("exodusrock", 1.2F);
 	public static final Block exodusIronOre = new ZGBlockOre("exodusironore", 5.2F)
 			.setBlockHarvestLevel(EnumHarvestToolZG.PICKAXE.getHarvestTool(), EnumHarvestLevelZG.AMARANTH.getHarvestLevel());
 	public static final Block exodusGoldOre = new ZGBlockOre("exodusgoldore", 6.3F)
@@ -660,8 +661,8 @@ public class ZGBlocks {
 				caligroEmeraldOre, caligroRadiumOre, caligroLapisOre, caligroZollerniumOre, caligroRubyOre, spiderlingEgg,
 				shadowBossSpawner, corruptRock, corruptCobble, corruptStone, corruptStoneBricks, corruptAscendiumOre, corruptEtriumOre,
 				corruptChargiumOre, corruptCreepstone, exodusTallGrass, exodusDirt, exodusGrass, exodusCobblestone, exodusStone,
-				exodusGravel, exodusIronOre, exodusGoldOre, exodusDiamondOre, exodusRedstoneOre, exodusCopperOre, blockBlueprintStation,
-				blockHealingStation, blockCrystalsPlutonium);
+				exodusGravel, exodusRock, exodusIronOre, exodusGoldOre, exodusDiamondOre, exodusRedstoneOre, exodusCopperOre,
+				blockBlueprintStation, blockHealingStation, blockCrystalsPlutonium);
 		ZGHelper.Log("Loaded a total of " + totalBlocks + " new blocks.");
 	}
 	
