@@ -1,0 +1,7 @@
+# Fields
+public net.minecraft.world.biome.Biome field_185364_H #baseBiomeRegName
+public net.minecraft.client.gui.GuiIngame field_73845_h #overlayMessageTime
+public net.minecraft.world.World field_73005_l # updateLCG
+
+# Methods
+public net.minecraft.util.text.translation.LanguageMap func_74808_a()Lnet/minecraft/util/text/translation/LanguageMap; #getInstance
